--- a/style.css
+++ b/style.css
@@ -20,7 +20,12 @@ h1{
     padding: 30px; 
     margin: 30px auto; /*margen arriba y abajo porque puse auto al final del primer valor */
 }
-
+.historial {
+    width: 100px;
+    background-color: rgb(144, 151, 248);
+    padding: 10px; 
+    margin: 10px auto; /*margen arriba y abajo porque puse auto al final del primer valor */
+}
 /*caja que tiene el form */
 .tareasList {
     margin-right: auto;
@@ -65,6 +70,11 @@ input {
     margin-left: auto;
     width: 100%; /*que ocupe todo el ancho de la caja*/
     
+}
+.toDoHistorial {
+    color:  black;
+    margin-right: auto;
+    margin-left: auto;   
 }
 
 li {
